--- a/biodata.html
+++ b/biodata.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="https://scontent-hkg3-1.xx.fbcdn.net/v/t1.0-9/71501805_2572202106396839_660841612535922688_n.jpg?_nc_cat=103&_nc_oc=AQmNr4e8fACv_OLiNZE7Wxa_nDYAp3fzYFvCwp5fDTD5UwX26KZHRtYEH1mY0UDU6TM&_nc_ht=scontent-hkg3-1.xx&oh=ba29ee69a04e9b4576f3437b8cf119bb&oe=5E314F3B"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style type="text/css">html{scroll-behavior: smooth;}div{transition: 0.3s all ease;}</style>
-    <title>Andika Sujanadi</title>
+    <title>Niki Indianto</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
@@ -33,7 +33,7 @@
               <tr>
                 <td>Nama</td>
                 <td>:</td>
-                <td>Andika Sujanadi</td>
+                <td>Niki Indianto</td>
               </tr>
               <tr>
                 <td>Tempat, tanggal lahir</td>
